--- a/frontend/blogmanagement/src/styles/Homepage.css
+++ b/frontend/blogmanagement/src/styles/Homepage.css
@@ -57,16 +57,16 @@
     align-items: center ;
 }
 
-.post{
+.home-container .post-container .all-posts .post{
     width: 20%;
 }
 
-.post img{
+.home-container .post-container .all-posts .post img{
     width: 100%;
 }
 
 
-.post p{
+.home-container .post-container .all-posts .post p{
     font-size: 14px;
 }
 
@@ -84,5 +84,7 @@
     border: none;
     border-radius: 5px;
     width: 40px;
+    color: white;
+    font-weight: bold;
     height: 40px;
 }
